--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-datawedge-intents",
-  "version": "0.1.8",
+  "name": "pm-react-native-datawedge-intents",
+  "version": "0.2.1",
   "description": "React Native Android module to interface with Zebra's DataWedge using Android Intents to control the barcode scanner and retrieve scanned data",
   "main": "index.js",
   "scripts": {
@@ -21,11 +21,17 @@
     "tc70",
     "data-capture"
   ],
-  "author": "Darryn Campbell",
+  "author": "Pere Malaret",
   "license": "MIT",
-  "repository": "https://github.com/darryncampbell/react-native-datawedge-intents",
-  "bugs": "https://github.com/darryncampbell/react-native-datawedge-intents/issues",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/PMalaret/react-native-datawedge-intents.git"
+  },
+  "bugs": {
+    "url": "https://github.com/PMalaret/react-native-datawedge-intents/issues"
+  },
   "peerDependencies": {
     "react-native": ">=0.56"
-  }
+  },
+  "homepage": "https://github.com/PMalaret/react-native-datawedge-intents#readme"
 }
